iac/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: event-planner-service
  labels:
    app: event-planner
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: event-planner
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
